--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
-spring.h2.console.enabled=true
-spring.datasource.url= jdbc:h2:mem:hawconnect;IFEXISTS=FALSE;
+spring.datasource.url=jdbc:mysql://localhost:3306/sea2
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jpa.show-sql=true
